LendersApp/src/objects/Disbursement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Disbursements</relationshipLabel>
        <relationshipName>Disbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Time__c</fullName>
        <label>Approved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <label>Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Disbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Acct_Used__c</fullName>
        <label>Bank Acct Used</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Disbursement_Amt__c</fullName>
        <inlineHelpText>Amount of funds disbursed.</inlineHelpText>
        <label>Disbursement Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Disbursements</relationshipLabel>
        <relationshipName>Disbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_Name__c</fullName>
        <label>Payee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pmt_Method__c</fullName>
        <label>Pmt Method</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recipient_Bank_Account__c</fullName>
        <label>Recipient Bank Account #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScreenShot_Payment__c</fullName>
        <label>ScreenShot (Payment)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter_Email__c</fullName>
        <label>Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Submitter_Name__c</fullName>
        <label>Submitter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Disbursement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Disbursement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disbursements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>